fixup! feat: Productivity Weekly(2023/05/17)

--- a/articles/template/productivity-weekly-template.md.tmpl
+++ b/articles/template/productivity-weekly-template.md.tmpl
@@ -27,6 +27,16 @@ user_defined: {"publish_link": "https://zenn.dev/korosuke613/articles/productivi
 
 今回が第 {{ .Env.PW_COUNT }} 回目です。過去の記事は[こちら](https://zenn.dev/topics/productivityweekly?order=latest)。
 
+:::message
+2023-05-10号から、実験的に生産性向上チームの他メンバーにいくつかのトピックを紹介していただくことにしています。
+
+対象のトピックでは、文章の最後に `本項の執筆者: <執筆者名>` を追加しています。
+
+今週の共同著者は次の方です。
+- [@defaultcf](https://zenn.dev/defaultcf)
+
+:::
+
 # news 📺
 
 # know-how 🎓
