feat: Productivity Weekly(2023/07/26)

--- a/articles/template/productivity-weekly-template.md.tmpl
+++ b/articles/template/productivity-weekly-template.md.tmpl
@@ -33,6 +33,7 @@ user_defined: {"publish_link": "https://zenn.dev/korosuke613/articles/productivi
 対象のトピックでは、文章の最後に `本項の執筆者: <執筆者名>` を追加しています。
 
 今週の共同著者は次の方です。
+- [@korosuke613](https://zenn.dev/korosuke613)
 - [@defaultcf](https://zenn.dev/defaultcf)
 
 :::
